# resume

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  TODO.md  maxence_bouvier_resume.tex  package-lock.json  pyproject.toml  resume_build.sh
.devcontainer/: Dockerfile  devcontainer.json
cv_data/: contact.csv  education.csv  experiences.csv  patents.csv  publications.csv  skills.csv  summary.csv
react_to_latex/: extract_experiences.js  extract_experiences_acorn.js  main.py
resume_builder/: __init__.py  cli.py  filters.py  loader.py  models.py  utils.py
resume_builder/generators/: __init__.py  base.py  latex.py  website.py
templates/: resume.tex.j2
