[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-builder"
version = "0.1.0"
description = "Utility to build a CV PDF from a LaTeX source using Docker"
readme = "README.md"
authors = [
  {name = "Maintainer"}
]
requires-python = ">=3.9"

[project.scripts]
make_cv = "resume_builder.cli:main"
